--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       display: flex;
       flex-direction: row;
       align-items: flex-end;
-      justify-content: space-between;
+      justify-content:center;
       color: white;
       margin: 10%;     
     }
@@ -24,35 +24,41 @@
     #sedans{
       background-color: hsl(31, 77%, 52%);
       height: 400px;
-      width: 500px;
+      width: 200px;
       padding-left: 30px;
-      padding-right: 30px;     
+      padding-right: 30px;  
+      padding-top: 70px;   
+      border-radius: 15px 0px 0px 15px;
     }
 
     #suvs{
       background-color: hsl(184, 100%, 22%);
       height: 400px;
-      width: 500px;
+      width: 200px;
       padding-left: 30px;
       padding-right: 30px;
+      padding-top: 70px;
+      
     }
 
     #luxury{
       background-color: hsl(179, 100%, 13%);
       height: 400px;
-      width: 500px;
+      width: 200px;
       padding-left: 30px;
       padding-right: 30px;
+      padding-top: 70px;
+      border-radius: 0px 15px 15px 0px;
     }
     .botao{
-      color: white;
-      background-color: rgba(0, 0, 0, 0);
-      border-color: white;
+      border: 0;
+      background-color: white;
       border-radius: 50px;
-      padding: 10px
-
-
-    }
+      padding: 14px;
+      padding-left: 30px;
+      padding-right: 30px;
+      margin-top: 80px;
+      color: aqua;
 
 
   </style>
